--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "mapbox-gl": "^3.11.1",
+    "@mapbox/mapbox-gl-geocoder": "5.0.3",
     "react-signature-canvas": "1.1.0-alpha.2",
     "@hookform/resolvers": "^3.9.0",
     "@radix-ui/react-accordion": "^1.2.0",
